Update python3.4 and add debian based version of it
- Add imaging system packages, upgrade pip and phantomjs
- Also modified nodejs installation since nodesource script is
  currently not working.
- Add makefile
- Fick some tiny issues:
  - Wrong value for Locales env var
  - phantomjs is deprecated, let's use phantomjs-prebuilt

- Clone of our generic python3.4 running on debian

--- a/debian-python3.4/Dockerfile
+++ b/debian-python3.4/Dockerfile
@@ -1,11 +1,7 @@
-FROM ubuntu:14.04
+FROM debian:jessie
 
 # Set maintainer value
 MAINTAINER Thorgate, hi@thorgate.eu
-
-# Install python
-RUN echo "deb http://ppa.launchpad.net/fkrull/deadsnakes/ubuntu trusty main" > /etc/apt/sources.list.d/deadsnakes.list \
-    && apt-key adv --keyserver keyserver.ubuntu.com --recv-keys DB82666C
 
 RUN apt-get update \
     && apt-get upgrade -y \
@@ -13,8 +9,8 @@ RUN apt-get update \
     build-essential \
     ca-certificates \
     gcc \
-    wget \
     git \
+    wget \
     libpq-dev \
     make \
     mercurial \
@@ -22,6 +18,8 @@ RUN apt-get update \
     python3.4 \
     python3.4-dev \
     ssh \
+    apt-utils \
+    locales \
     && apt-get autoremove \
     && apt-get clean
 
@@ -33,25 +31,26 @@ RUN pip3.4 install -U "pip"
 RUN pip3.4 install -U "virtualenv"
 
 # Set the locale
-RUN locale-gen en_US.UTF-8
+RUN sed -i -e 's/# en_US.UTF-8 UTF-8/en_US.UTF-8 UTF-8/' /etc/locale.gen
+RUN locale-gen --purge en_US.UTF-8
+ENV DEBIAN_FRONTEND noninteractive
+RUN dpkg-reconfigure -f noninteractive locales
 ENV LANG en_US.UTF-8
 ENV LANGUAGE en_US:UTF-8
 ENV LC_ALL en_US.UTF-8
-ENV DEBIAN_FRONTEND noninteractive
-RUN dpkg-reconfigure -f noninteractive locales
 
 # install requirements
 RUN apt-get update
 RUN apt-get install -y libzip-dev libxml2-dev libxslt1-dev curl
-RUN apt-get install -y libjpeg62 libjpeg62-dev zlib1g-dev
+RUN apt-get install -y libjpeg62 libjpeg62-turbo-dev zlib1g-dev
 RUN pip install --upgrade pip
 RUN pip install wheel
 
 # Add nodejs rep
 RUN apt-get install -y apt-transport-https
 RUN curl -sL add https://deb.nodesource.com/gpgkey/nodesource.gpg.key | apt-key add -
-RUN echo "deb https://deb.nodesource.com/node_0.12 trusty main" > /etc/apt/sources.list.d/nodesource.list
-RUN echo "deb-src https://deb.nodesource.com/node_0.12 trusty main" >> /etc/apt/sources.list.d/nodesource.list
+RUN echo "deb https://deb.nodesource.com/node_0.12 jessie main" > /etc/apt/sources.list.d/nodesource.list
+RUN echo "deb-src https://deb.nodesource.com/node_0.12 jessie main" >> /etc/apt/sources.list.d/nodesource.list
 RUN echo "Package: *" > /etc/apt/preferences.d/deb_nodesource_com_node.pref
 RUN echo "Pin: release o=Node Source" >> /etc/apt/preferences.d/deb_nodesource_com_node.pref
 RUN echo "Pin-Priority: 500" >> /etc/apt/preferences.d/deb_nodesource_com_node.pref
@@ -63,11 +62,13 @@ RUN apt-get install -y \
     fonts-dejavu \
     fonts-droid \
     fonts-liberation \
-    ttf-ubuntu-font-family \
     nodejs \
     poppler-utils
 
-# Install npm
+RUN wget http://mirrors.kernel.org/ubuntu/pool/main/u/ubuntu-font-family-sources/ttf-ubuntu-font-family_0.80-0ubuntu6_all.deb
+RUN dpkg -i ttf-ubuntu-font-family*.deb
+
+# Install via npm
 RUN npm install -g phantomjs-prebuilt
 
 # Copy pip config
