Fix temporary common dir naming

--- a/alpine-python3.5/Dockerfile
+++ b/alpine-python3.5/Dockerfile
@@ -31,7 +31,7 @@ RUN \
 
 
 # Copy pip config
-COPY common/pip.conf /root/.config/pip/pip.conf
+COPY .common/pip.conf /root/.config/pip/pip.conf
 
 # Use global wheelhouse /dir
 VOLUME /wheelhouse:/wheelhouse
