--- a/debian-python3.4/Makefile
+++ b/debian-python3.4/Makefile
@@ -4,7 +4,7 @@ NAME = thorgate/debian-python3.4
 VERSION = 1.1.0
 
 common:
-	yes | cp -rf ../common .
+	yes | cp -rf ../common ./.common
 
 build: common
 	docker build -t $(NAME):$(VERSION) --rm .
@@ -19,5 +19,5 @@ push:
 	@if ! docker images $(NAME) | awk '{ print $$2 }' | grep -q -F $(VERSION); then echo "$(NAME) version $(VERSION) is not yet built. Please run 'make build'"; false; fi
 	docker push $(NAME)
 
-release: tag_latest build push
+release: build tag_latest push
 release-fast: build-fast tag_latest push
