--- a/python3.4/Dockerfile
+++ b/python3.4/Dockerfile
@@ -80,6 +80,6 @@ RUN apt-get install -y \
 RUN npm install -g phantomjs-prebuilt
 
 # Copy pip config
-COPY common/pip.conf /root/.config/pip/pip.conf
+COPY .common/pip.conf /root/.config/pip/pip.conf
 
 VOLUME /wheelhouse:/wheelhouse
