--- a/debian-python3.4/Dockerfile
+++ b/debian-python3.4/Dockerfile
@@ -74,4 +74,4 @@ RUN npm install -g phantomjs-prebuilt
 # Copy pip config
 COPY .common/pip.conf /root/.config/pip/pip.conf
 
-VOLUME /wheelhouse:/wheelhouse
+VOLUME /wheelhouse
