Make celery container more extensible

--- a/drone-celery-alpine-3.5/Dockerfile
+++ b/drone-celery-alpine-3.5/Dockerfile
@@ -3,4 +3,7 @@ FROM thorgate/alpine-python3.5:1.2.0
 COPY celery-init.sh /celery-init
 RUN chmod +x /celery-init
 
+COPY celery-kill.sh /celery-kill
+RUN chmod +x /celery-kill
+
 CMD ["/celery-init"]
